--- a/LinkerCofe/LinkerCofe/Properties/Resources.resx
+++ b/LinkerCofe/LinkerCofe/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="2D231B7600000578-3641896-image-a-35_1465944582846" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\2D231B7600000578-3641896-image-a-35_1465944582846.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Customer Linker Cofe-01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Customer Linker Cofe-01.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
